# clawagents_py

./: .env.example  README.md  benchmark_clawagents.py  benchmark_economic_supervisor-pinchbench.py  benchmark_economic_supervisor.py  benchmark_economic_supervisor_report.json  benchmark_economic_supervisor_report1.json  benchmark_versions.py  pyproject.toml  run_comparative_benchmarks.py
examples/: 01_openai.py  02_gemini.py  03_azure.py  04_local_ollama.py  05_local_vllm.py  06_bedrock.py  07_with_custom_tools.py  08_compare_samples.py  09_economic_supervisor.py
skill-main/: .gitignore  Dockerfile.benchmark  LICENSE  README.md  SKILL.md  crab.txt  pyproject.toml
skill-main/.github/: benchmark-models.yml
skill-main/assets/: ai_blog.txt  company_expenses.xlsx  quarterly_sales.csv
skill-main/scripts/: benchmark.py  lib_agent.py  lib_grading.py  lib_tasks.py  lib_upload.py  run.sh
skill-main/tasks/: TASK_TEMPLATE.md  task_00_sanity.md  task_01_calendar.md  task_02_stock.md  task_03_blog.md  task_04_weather.md  task_05_summary.md  task_06_events.md  task_07_email.md  task_08_memory.md  task_09_files.md  task_10_workflow.md  task_11_clawdhub.md  task_12_skill_search.md  task_13_image_gen.md  task_14_humanizer.md  task_15_daily_summary.md  task_16_email_triage.md  task_17_email_search.md  task_18_market_research.md  task_19_spreadsheet_summary.md  task_20_eli5_pdf_summary.md  task_21_openclaw_comprehension.md  task_22_second_brain.md
slides/economic_supervisor_benchmark/: economic_supervisor_benchmark.tex
src/clawagents/: __init__.py  __main__.py  agent.py  benchmarking.py
src/clawagents/config/: config.py
src/clawagents/context/: __init__.py  engine.py
src/clawagents/gateway/: server.py
src/clawagents/graph/: agent_loop.py
src/clawagents/providers/: economic.py  llm.py
src/clawagents/skills/byterover/: SKILL.md
src/clawagents/tools/: cache.py  compose.py  exec.py  filesystem.py  registry.py  skills.py  validate.py  web.py
src/clawagents/trajectory/: __init__.py  compare.py  judge.py  lessons.py  recorder.py  verifier.py
tests/: test_benchmark.py  test_config.py  test_config_consistency.py  test_economic_supervisor.py  test_fullstack.py  test_integration_parallel.py  test_integration_sophisticated.py  test_malformed_fn_call.py  test_recorder.py  test_repair_json.py
